ThriftSerializePerformance